--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 
 <body>
   <div class="header">
-  <h2 class=""> Discover hidden places in the world around you</h2>
-    <a href="">Download Excursion(Coming soon!)</a>
-    <img src="">
-    <p>Your personal travel guide</p>
+    <h2 class=""> Discover hidden places in the world around you</h2>
+    <p class="link">Download Excursion(Coming soon!)</p>
+      <video source src="./resources/images/excursion.mp4" type="video/mp4" autoplay loop></video>
+      <p>Your personal travel guide</p>
 
+  </div>
 
+  <div class="_c">
+    <p class="camp">Excursion remembers places you like,and recommends
+      new points of interest around you.</p>
+      <img src="./resources/images/camp.jpg" class="campground">
   </div>
 
 
