--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Excursion</title>
-  <link href="./resources/style.css" rel="stylesheet" type="text/css">
+  <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
+
 
 </head>
 
@@ -10,20 +11,26 @@
   <div class="header">
     <h2 class=""> Discover hidden places in the world around you</h2>
     <p class="link">Download Excursion(Coming soon!)</p>
-      <video source src="./resources/images/excursion.mp4" type="video/mp4" autoplay loop></video>
-      <p>Your personal travel guide</p>
+      <video source src="./resources/videos/excursion.mp4" type="video/mp4" autoplay loop></video>
+      <p class="guide">Your personal travel guide</p>
 
   </div>
 
   <div class="_c">
     <p class="camp">Excursion remembers places you like,and recommends
       new points of interest around you.</p>
-      <img src="./resources/images/camp.jpg" class="campground">
+      <img src="./resources/images/camp.jpg" class="campground"></p>
+      <br><br>
+      <img src="./resources/images/phone.png" class="icon">
+      <p class="iphone">Coming Soon for iPhone and Android</p>
+        <p class="link">Download Excursion(Coming soon!)</p>
   </div>
 
-
-
-
+<div class="footer">
+  <footer>
+    <p>&copy; excursion</p>
+  </footer>
+</div>
 
 </body>
 
