--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <div class="_c">
     <p class="camp">Excursion remembers places you like,and recommends
       new points of interest around you.</p>
-      <img src="./resources/images/camp.jpg" class="campground"></p>
+      <p><img src="./resources/images/camp.jpg" class="campground"></p>
       <br><br>
-      <img src="./resources/images/phone.png" class="icon">
+      <p><img src="./resources/images/phone.png" class="icon"></p>
       <p class="iphone">Coming Soon for iPhone and Android</p>
         <p class="link">Download Excursion(Coming soon!)</p>
   </div>
